日志 - 2022年1月16日16点04分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,7 +27,9 @@
         "ostream": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "lf_log.h": "c",
+        "string.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
