调度 - 2022年1月16日16点37分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,8 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "lf_log.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "eloop.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
