增加 time - 2022年1月18日11点42分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,8 @@
         "utility": "cpp",
         "lf_log.h": "c",
         "string.h": "c",
-        "eloop.h": "c"
+        "eloop.h": "c",
+        "cstdint": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
