增加http客户端和json解析器 - 2022年1月26日18点50分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,8 @@
         "lf_log.h": "c",
         "string.h": "c",
         "eloop.h": "c",
-        "cstdint": "c"
+        "cstdint": "c",
+        "http.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
