增加uci - 2022年2月14日11点19分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,8 @@
         "string.h": "c",
         "eloop.h": "c",
         "cstdint": "c",
-        "http.h": "c"
+        "http.h": "c",
+        "uci.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
