增加websocket测试 - 2022年3月14日10点36分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,9 @@
         "eloop.h": "c",
         "cstdint": "c",
         "http.h": "c",
-        "uci.h": "c"
+        "uci.h": "c",
+        "libwebsockets.h": "c",
+        "time.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
