增加RTC 和 I2C 例程 - 2022年6月15日14点35分 - lf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,11 @@
         "pthread.h": "c",
         "errno.h": "c",
         "mqueue.h": "c",
-        "list": "c"
+        "list": "c",
+        "unistd.h": "c",
+        "rtc.h": "c",
+        "ioctl.h": "c",
+        "i2c.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
